# PS3-Redump-downloader

./: .gitignore  Cargo.toml  README.md  config.ini
src/: config.rs  decryptor.rs  downloader.rs  key_manager.rs  lib.rs  main.rs  models.rs  scraper.rs  utils.rs
